--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,36 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <title>CONTACTO</title>
+    <link rel="shortcut icon" href="/assets/media/icons/vet.ico">
+    <title>Veterinaria Lobos</title>
 </head>
 <body>
-    <header>
-        <nav>
-        <ul>
-            <li><a href="../index.html">HOME</a></li>
-            <li><a href="./nosotros.html">NOSOTROS</a></li>
-            <li><a href="./tienda.html">TIENDA</a></li>
-            <li><a href="./contacto.html">CONTACTO</a></li>
-        </ul>
-        </nav>
+    <nav class="nav">
+        <a class="nav-a" href="/index.html">Inicio</a>
+        <a class="nav-a" href="/pages/nosotros.html">Historia</a>
+        <a class="nav-a" href="/pages/tienda.html">Servicios</a>
+    </nav>
+    <header class="header">
+        <h1 class="header-t">Nuestras vias de comunicación</h1>
+        <p class="header-p">Tu mascota es lo más importante. No dudes en ponerte en contacto con nosotros!</p>
     </header>
+    <main class="main-container-contact">
+            <div class="div-contact">
+                <section class="contact">
+                    <h3>LLamanos!</h3>
+                    <a class="a-contact" href="tel:+34942033330">542-033-330</a>
+                </section>
+                <section class="contact">
+                    <h3>Mandanos Whatsapp!</h3>
+                    <a class="a-contact" href="https://wa.me/54123456789">+54-123456789</a>
+                </section>
+                <section class="contact">
+                    <h3>Envia un correo!</h3>
+                    <a class="a-contact" href="mailto:clinicaveterinaria.lobos@gmail.com">clinicaveterinaria.lobos@gmail.com</a>
+                </section>
+            </div>
+            <h2>Pide cita</h2>
+            <p>Si quieres contactarte para obtener más información rellena el siguiente formulario:</p>
+            <form class="main-form" action="" method="post" id="contact-form" onsubmit="return validarFormulario()">     
+                
+                <label for="nombre">Nombre:</label>
+                <input class="input-to-fill" type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre">
+                <label for="apellido">Apellido:</label>
+                <input class="input-to-fill" type="text" id="apellido" name="apellido" placeholder="Ingrese su apellido">
+                <label for="email">Correo Electrónico:</label>
+                <input class="input-to-fill" type="email" id="email" name="email" placeholder="Ingrese su email">
+                <label for="mensaje">Mensaje:</label>
+                <textarea class="input-to-fill" id="mensaje" name="mensaje" rows="4" cols="50" maxlength="300"></textarea>
+                <span>
+                <label for="terminos">Deseo estar al día de las novedades de la clínica:</label>
+                <input type="radio" name="terminos" value="1" />Si
+                <input type="radio" name="terminos" value="2" />No
+                </span>
+                <span>
+                <label for="suscripcion">Acepto la Cláusula de Contacto</label>
+                <input type="checkbox" id="suscripcion" name="suscripcion">
+                </span>
+                <button type="submit" value="Enviar">Enviar</button>
+            </form>
 
-
-
-    <main class="main-container">
-        <section class="section">
-            <h1>Formulario</h1>
-        </section>
-
-        <section class="section-container">
-            <h1>Iframe con ubicación</h1>
-        </section>
+            <section class="main-section">
+                <h2>Nuestra ubicación</h2>
+                <p>Estamos ubicados en Buenos Aires, Argentina. Recibimos consultas de todo el territorio nacional.</p>
+                <p>Contáctanos en nuestro horario laboral</p>
+                <p>Lunes, jueves y viernes de 8:00h a 16:00h<br><br>Martes y miércoles de 8:00h a 19:00h.</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26261.89233581146!2d-58.58562138916019!3d-34.63609749999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9b45dededbd%3A0xcc2a751c9e9ca5f6!2sCLINICA%20VETERINARIA%20LANIN!5e0!3m2!1ses-419!2ses!4v1696498339888!5m2!1ses-419!2ses" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
     </main>
-
-
-
     <footer>
-        <h4>Todos los derechos reservados</h4>
+        <h4>&copy; 2023 - Todos los derechos reservados</h4>
+        <a class="redes-list" target="_blank" href="https://www.facebook.com/" rel="noopener noreferrer">Facebook</a>
+        <a class="redes-list" target="_blank" href="https://www.instagram.com/" rel="noopener noreferrer">Instagram</a>
+        <a class="redes-list" target="_blank" href="http://www.twitter.com" rel="noopener noreferrer">Twitter</a>
     </footer>
 </body>
 </html>
